# ai-job-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: user_profile.yaml
data/: sample_jobs.json
data/resumes/: alex_frontend_developer.txt  alex_ml_engineer.txt
docs/: architecture.md  demo_script.md
src/: __init__.py
src/adk/: root_agent.py
src/agent/: __init__.py  scout.py
src/agents/: __init__.py  ats_tailor_agent.py  job_fit_agent.py  notification_agent.py  orchestrator_agent.py  profile_agent.py  ranking_agent.py  resume_selector_agent.py  search_agent.py
src/config/: __init__.py  profile.py  settings.py
src/llm/: __init__.py  gemini_client.py
src/notifications/: __init__.py  notifier.py
src/ranking/: matcher.py
src/sources/: __init__.py  arbeitnow_source.py  base.py  external_source.py  sample_source.py  url_source.py
src/storage/: __init__.py  db.py
tests/: __init__.py  test_adk.py  test_agent.py  test_arbeitnow.py  test_ats_tailor.py  test_cli.py  test_db.py  test_external_source.py  test_gemini_client.py  test_job_fit.py  test_multi_agents.py  test_notifier.py  test_profile.py  test_ranking.py  test_resume_selector.py  test_sources.py  test_url_source.py
