[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-scout-agent"
version = "0.1.0"
description = "A local-first AI Job Scout Agent built for the Kaggle/Google Agentic AI Capstone."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=0.1.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "PyYAML>=6.0",
    "google-adk>=2.3.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
